# mdbook-wordcount

./: Cargo.toml  README.md
src/: main.rs
