[package]
name = "mdbook-wordcount"
description = "Word count for mdbook, inspired by the mdbook tutorial"
readme = "README.md"
version = "1.0.1"
repository = "https://github.com/nomorepanic/mdbook-wordcount"
authors = ["Jacopo Cascioli <jacopo@jacopocascioli.com>"]
license = "MPL-2.0"
edition = "2018"

[dependencies]
mdbook = "~0.4"
serde = "~1.0"
serde_derive = "~1.0"
regex = "~1.5"
lazy_static = "~1.4"
